--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1,6 +1,6 @@
 html body {
 	background-repeat: no-repeat;
-	background: url(../img/wood_house_3.jpg) no-repeat center center fixed; 
+	background: url(../img/wood_house_4.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -14,6 +14,8 @@ html body {
 	color: white;
 	font-family: 'Pacifico';
 	letter-spacing: 7px;
+}
+#cntlr {
 	display: table;
 }
 .
@@ -25,21 +27,29 @@ label {
 	color: white;
 }
 .center {
-	display: table-cell;
+	display: table-row;
 	text-align: center; 
 	vertical-align: middle;
+	height: 200px;
+}
+.center-cell {
+	display: table-cell;
+	text-align: center; 
+	height: 200px;
 }
 .lrg {
 	height: 100px;
-	font-size: 4em;
+	font-size: 3em;
 	font-weight: light; 
 	color: white;
 }
+
 #map{
-	width: 50%;
-	height: 300px;
+	width: 20%;
+	height: 400px;
 }
 #map-estimator{
 	height: 200px;
 	display: table;
+	display: none;
 }
