--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1,11 +1,9 @@
-html body {
-	background-repeat: no-repeat;
+html, body {	
 	background: url(../img/wood_house_4.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  height: 100%;
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
 }
 #header {
 	height: 200px;
