--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1,4 +1,5 @@
-html, body {	
+body {	
+	position: absolute;
 	background: url(../img/wood_house_4.jpg) no-repeat center center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
