--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1,4 +1,6 @@
 body {	
+	height: 100%;
+	width: 100%;
 	position: relative;
 	background: url(../img/wood_house_4.jpg) no-repeat center center fixed; 
   	-webkit-background-size: cover;
