--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1,6 +1,5 @@
-html { background: transparent;}
-body {	
-	height: 100%;
+html, body {	
+	height: 100% !important;
 	width: 100%;
 	position: relative;
 	background: url(../img/wood_house_4.jpg) no-repeat center center fixed; 
