--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1,7 +1,8 @@
-html, body {	
-	height: 100% !important;
+html, body {
+	min-height: 1000px;
+	min-width: 500px;	
+	height: 100vh !important;
 	width: 100%;
-	position: relative;
 	background: url(../img/wood_house_4.jpg) no-repeat center center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
