--- a/public/views/mapView.html
+++ b/public/views/mapView.html
@@ -1,11 +1,6 @@
-<div id="map-estimator" class="row text-center">
-    <div>
-        <div class="col-sm-12 col-md-12 col-lg-12 lrg">
-            House Estimates
-            low {{house_estimate.low | currency:"$":0}} mid {{house_estimate.mid | currency:"$":0}} high {{house_estimate.high | currency:"$":0}}
-        </div>
-    </div>
+<div id="map-estimator" class="row">
     <div class=" center-block">
         <div id="map" class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3"></div>
     </div>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaOzU7c_8RDreOb24Cugn1D9_gaWt0_To&callback=init&libraries=places" ></script>
 </div>
