--- a/public/css/css.css
+++ b/public/css/css.css
@@ -46,17 +46,13 @@ label {
 	height: 400px;
 	max-width: 400px;
 }
-#map-estimator{
-	height: 400px;
-	display: none;
-	padding: 20px;
-
-/*	margin: 0 auto;
+#mapView{
+	margin: 0 auto;
 	padding: 20px;
 	display:none;
 	background-color: white;
 	border-radius: 25px;
-    border: 2px solid #73AD21;*/
+    border: 2px solid #73AD21;
 }
 #no-estimate{
 	display: none;
@@ -71,4 +67,9 @@ label {
 }
 .glyphicon-triangle-right{
 	color:black;
+}
+
+input, textarea{
+    background-color:#666;
+    color: #FFF;
 }
