--- a/public/views/headerView.html
+++ b/public/views/headerView.html
@@ -1,5 +1,5 @@
 <div id="header"class="row">
     <div class="center text-center">
-        estimate your home value
+        What's Your Home Worth?
     </div>
 </div>
