adding more css

--- a/public/views/headerView.html
+++ b/public/views/headerView.html
@@ -1,5 +1,4 @@
 <div id="header"class="row">
-    <div class="center text-center">
-        What's Your Home Worth?
-    </div>
+    <div id="main" class="center text-center">What's Your Home Worth?</div>
+    <div id="secondary" class="center text-center">get your free estimate instantly</div>
 </div>
