--- a/public/views/noEstimateView.html
+++ b/public/views/noEstimateView.html
@@ -1,5 +1,12 @@
 <div id="no-estimate" class="row text-center">
-    <div class="col-sm-12 col-md-12 col-lg-12 lrg">
-        No estimate found
+    <div id="realtor_info">
+        <div id="realtor-pics"class="col-sm-4 col-md-4 col-lg-4">
+            <a href="http://eltonproperties.com/"><img src="../img/Michael-Elton.jpg" class="img-responsive"/></a>
+            <a href="http://eltonproperties.com/"><img src="../img/melton.jpg" class="img-responsive"/></a>
+        </div>
+        <div class="med-text col-sm-8 col-md-8 col-lg-8">
+            <h3>visit my website by clicking <a href="http://eltonproperties.com/">here</a></h3>
+        <div class="col-sm-12 col-md-12 col-lg-12 lrg">
+        No estimate found, please contact me to set up an appointment for an appraisal
     </div>
 </div>
