--- a/public/css/css.css
+++ b/public/css/css.css
@@ -9,58 +9,78 @@ html, body {
   	-o-background-size: cover;
   	background-size: cover;
 }
+.white {
+	color: white;
+}
+#map-container{
+	height: 400px;
+    width: 100%;	
+}
 #userinfo{
 	margin: 0 auto;
+	padding-top: 50px;
 	padding-left: 25px;
 	padding-right: 25px;
 }
-#realtor{
+#realtor, #no-estimate{
 	margin: 0 auto;
 	padding: 20px;
 	display:none;
 	background-color: white;
 	border-radius: 25px;
     border: 2px solid #73AD21;
+    margin-bottom: 20px;
 }
-
-#header {
-	height: 200px;
-	font-size: 4em;
+#main {
+	padding-top:20px;
+	padding-bottom: 20px;
+	font-size: 2em;
 	font-weight: lighter;
 	color: white;
 	font-family: 'Pacifico';
 	letter-spacing: 7px;
 }
+#secondary {
+	height: 100px;
+	font-size: 2em;
+	font-weight: lighter;
+	color: white;
+	letter-spacing: 7px;
+}
+@media (min-width: 500px) {
+    #main { font-size: 3em; }
+}
+@media (min-width: 700px) {
+    #main { font-size: 4em%; }
+}
 label {
 	color: white;
 }
-
 .lrg {
 	font-size: 3em;
 	font-weight: light; 
 	color: black;
 }
-
 #map{
-	width: 20%;
-	height: 400px;
-	max-width: 400px;
+	width: 100%;
+	height: 300px;
 }
 #mapView{
-	margin: 0 auto;
+	width: 100%;
 	padding: 20px;
+	margin-bottom: 50px;
 	display:none;
-	background-color: white;
-	border-radius: 25px;
-    border: 2px solid #73AD21;
 }
 #no-estimate{
 	display: none;
 }
-
+.form-actions {
+    margin: 0;
+    background-color: transparent;
+    text-align: center;
+}
 .glyphicon-triangle-top{
 	color:green;
-
 }
 .glyphicon-triangle-bottom{
 	color:red;
@@ -68,8 +88,11 @@ label {
 .glyphicon-triangle-right{
 	color:black;
 }
-
 input, textarea{
     background-color:#666;
     color: #FFF;
+    width: 400px;
+}
+.transparent{
+	opacity:.5;
 }
