--- a/public/views/mapView.html
+++ b/public/views/mapView.html
@@ -1,23 +1,21 @@
 <div id="mapView" class="row">
-    <h1>we found your property! confirm this is yours and let us know where to send the report.</h1>
-    <div class=" center-block">
-        <div id="map" class="col-sm-12 col-md-12 col-lg-12"></div>
-    </div>
-    
-    <div class="col-sm-12 col-md-12 col-lg-12">
-        <form ng-submit="submit" data-toggle="validator" class="form-horizontal">
+    <div class="white"><h1>we found your property! confirm this is yours and let us know where to send the report.</h1></div>
+    <div id="map" style="height: 400px;"></div>
+    <div id="mapContainer" style="width: 100%;" class="col-sm-12 col-md-12 col-lg-12">
+        
+        <form name="userForm" ng-submit="submit" data-toggle="validator" class="form-horizontal">
             <div class="form-group">
-                <label for="name"class="control-label">Full Name</label>
+                <label for="name" class="control-label">Full Name</label>
                 <input id="name" name="name" type="text" placeholder="full name"
-                    class="form-control input-lg" ng-model="name" required>
+                    class="form-control input-lg" ng-model="name" ng-required="true" required>
             </div>
             <div class="form-group">
                 <label for="inputEmail" class="control-label">Email</label>
-                <input type="email" ng-model="email" name="email" class="form-control input-lg" id="inputEmail" placeholder="Email" data-error="Bruh, that email address is invalid" required>
+                <input type="email" ng-model="email" name="email" class="form-control input-lg" id="inputEmail" placeholder="Email" data-error="Bruh, that email address is invalid" ng-required="true" required>
                 <div class="help-block with-errors"></div>
             </div>
             <div class="form-group">
-                <input id="info" type="submit" value="get estimate" class="btn btn-primary btn-lg" ng-click="getEstimate()"/>
+                <input id="info" type="submit" value="get estimate" class="btn btn-primary btn-lg" ng-click="userForm.$valid &&getEstimate()"/>
             </div>
         </form>
     </div>
