--- a/public/views/mapView.html
+++ b/public/views/mapView.html
@@ -1,22 +1,22 @@
 <div id="mapView" class="row">
     <div class="white"><h1>we found your property! confirm this is yours and let us know where to send the report.</h1></div>
     <div id="map" style="height: 400px;"></div>
-    <div id="mapContainer" style="width: 100%;" class="col-sm-12 col-md-12 col-lg-12">
+    <div id="mapContainer" class="col-sm-12 col-md-12 col-lg-12">
         
-        <form name="userForm" ng-submit="submit" data-toggle="validator" class="form-horizontal">
+        <form id="form"name="userForm" ng-submit="submit" data-toggle="validator" class="form-horizontal">
             <div class="form-group">
                 <label for="name" class="control-label">Full Name</label>
                 <input id="name" name="name" type="text" placeholder="full name"
-                    class="form-control input-lg" ng-model="name" ng-required="true" required>
+                    class="form-control input-lg" ng-model="user.name" ng-required="true" required>
             </div>
             <div class="form-group">
-                <label for="inputEmail" class="control-label">Email</label>
-                <input type="email" ng-model="email" name="email" class="form-control input-lg" id="inputEmail" placeholder="Email" data-error="Bruh, that email address is invalid" ng-required="true" required>
+                <label for="email" class="control-label">Email</label>
+                <input type="email" ng-model="user.email" name="email" class="form-control input-lg" id="email" placeholder="Email" data-error="Bruh, that email address is invalid" ng-required="true" required>
                 <div class="help-block with-errors"></div>
             </div>
             <div class="form-group">
-                <input id="info" type="submit" value="get estimate" class="btn btn-primary btn-lg" ng-click="userForm.$valid &&getEstimate()"/>
-            </div>
+                <input id="estimateBtn" type="submit" value="get estimate" class="btn btn-warning btn-lg" ng-click="userForm.$valid && getEstimate(user)"/>
+            </div> 
         </form>
     </div>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaOzU7c_8RDreOb24Cugn1D9_gaWt0_To&callback=init&libraries=places" ></script>
