refactored controllers into three separate and created estimate factory to inject into each

--- a/public/views/addressView.html
+++ b/public/views/addressView.html
@@ -1,4 +1,4 @@
-<div id="userinfo" class="row">
+<div id="userinfo" class="row" ng-controller="addressController">
     <div class="col-sm-12 col-md-12 col-lg-12">
         <form ng-submit="submit" data-toggle="validator" role="form" class="form-horizontal">
             <div class="form-group">
