--- a/public/views/mapView.html
+++ b/public/views/mapView.html
@@ -1,4 +1,4 @@
-<div id="mapView" class="row">
+<div id="mapView" class="row" ng-controller="estimateController">
     <div class="white"><h1>we found your property! confirm this is yours and let us know where to send the report.</h1></div>
     <div id="map" style="height: 400px;"></div>
     <div id="mapContainer" class="col-sm-12 col-md-12 col-lg-12">
