--- a/public/views/realtorView.html
+++ b/public/views/realtorView.html
@@ -1,4 +1,4 @@
-<div id="realtor" class="row">
+<div id="realtor" class="row" ng-controller="realtorController">
     <div id="realtor_info">
         <div id="realtor-pics"class="col-sm-4 col-md-4 col-lg-4">
             <a href="http://eltonproperties.com/"><img src="../img/Michael-Elton.jpg" class="img-responsive"/></a>
@@ -12,9 +12,9 @@
         </div>
             <div class="col-sm-12 col-md-12 col-lg-12 lrg text-center">
             House Estimates
-            <div><span class="background glyphicon glyphicon-triangle-top"></span>{{house_estimate.high | currency:"$":0}}</div>
-            <div><span class="background glyphicon glyphicon-triangle-right"></span>{{house_estimate.mid | currency:"$":0}}</div>
-            <div><span class="background glyphicon glyphicon-triangle-bottom"></span>{{house_estimate.low | currency:"$":0}}</div> 
+            <div><span class="background glyphicon glyphicon-triangle-top"></span>{{profile.estimate.high | currency:"$":0}}</div>
+            <div><span class="background glyphicon glyphicon-triangle-right"></span>{{profile.estimate.mid | currency:"$":0}}</div>
+            <div><span class="background glyphicon glyphicon-triangle-bottom"></span>{{profile.estimate.low | currency:"$":0}}</div> 
         </div>
     </div>
 </div>
